# Zero-bot

./: .gitignore  .replit  main.py  pyproject.toml  render.yaml  replit.md  requirements.txt
.agents/memory/: MEMORY.md  mongodb-atlas-tls.md
attached_assets/: Pasted-I-want-to-upgrade-the-server-setup-feature-in-cogs-serv_1784624018531.txt
discord-bot/: conversation_manager.py  db.py  keep_alive.py  main.py  requirements.txt  revolver.py
discord-bot/cogs/: admin.py  bot_integrator.py  general.py  server_architect.py
