[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2026.5.20",
    "discord-py>=2.7.1",
    "dnspython>=2.8.0",
    "flask>=3.1.3",
    "google-genai>=2.8.0",
    "google-generativeai>=0.8.6",
    "groq>=1.4.0",
    "motor>=3.7.1",
]
